[package]
name = "cluster-orchestrator"
version = "0.1.0"
edition = "2021"
authors = ["Cluster Team"]
description = "Kubernetes cluster orchestration and management library"
license = "MIT"

[dependencies]
# Kubernetes client
kube = { version = "0.88", features = ["runtime", "client", "ws"] }
k8s-openapi = { version = "0.21", features = ["v1_28"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.74"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.13"
metrics = "0.22"

# Configuration
config = "0.14"
chrono = "0.4"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"

[dev-dependencies]
# Testing
mockito = "1.2"
mockall = "0.12"
proptest = "1.4"
criterion = "0.5"

# Chaos engineering
chaos-mesh = "0.1"
pulumi = { version = "3.0", optional = true }

# Integration testing
docker-compose = "0.1"
k3d = "0.1"
testcontainers = "0.15"

# Performance testing
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
flamegraph = "0.6"

[[bench]]
name = "scaling"
harness = false

[[bench]]
name = "recovery"
harness = false

[[bench]]
name = "resource_optimization"
harness = false
